Revert "wordle with php implemented"
This reverts commit 5e7fc76d2e0bdea8b8efdcb46baf6f8266abc526.

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 
 {
-  "name": "wordle",
+  "name": "wordle-clone",
   "version": "1.0.0",
-  "description": "Wordle",
+  "description": "Wordle clone by DoubleDebug",
   "main": "index.mjs",
   "type": "module",
   "scripts": {
     "start": "http-server"
   },
+  "author": "Your Name",
   "license": "ISC",
   "dependencies": {
     "http-server": "^0.12.3"
